--- a/package.json
+++ b/package.json
@@ -9,17 +9,48 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.16.1",
+    "@hookform/resolvers": "^3.3.1",
+    "@ignite-ui/react": "^2.2.4",
+    "@prisma/client": "^5.3.1",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-query": "^4.35.7",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.16",
+    "axios": "^1.5.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "lucide-react": "^0.279.0",
     "next": "13.5.2",
-    "postcss": "8.4.30",
-    "react": "18.2.0",
+    "next-auth": "^4.23.1",
+    "nookies": "^2.5.2",
+    "react": "^18.2.0",
+    "react-day-picker": "^8.8.2",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "react-hook-form": "^7.47.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwind-scrollbar": "^3.0.5",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.2.2",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
+    "@types/cookie": "^0.5.2",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "prisma": "^5.3.1",
+    "tailwindcss": "^3.3.3"
   }
 }
