--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "googleapis": "^126.0.1",
     "lucide-react": "^0.279.0",
     "next": "13.5.2",
     "next-auth": "^4.23.1",
