--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@auth/core": "^0.16.1",
     "@hookform/resolvers": "^3.3.1",
     "@ignite-ui/react": "^2.2.4",
-    "@prisma/client": "^5.3.1",
+    "@prisma/client": "^5.10.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -29,10 +29,12 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "dayjs": "^1.11.10",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
     "googleapis": "^126.0.1",
     "lucide-react": "^0.279.0",
+    "luxon": "^3.4.4",
     "next": "13.5.2",
     "next-auth": "^4.23.1",
     "nookies": "^2.5.2",
@@ -49,11 +51,12 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/cookie": "^0.5.2",
+    "@types/luxon": "^3.4.2",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
-    "prisma": "^5.3.1",
+    "prisma": "^5.10.1",
     "tailwindcss": "^3.3.3"
   }
 }
